--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "morgan": "~1.9.0",
     "mysql2": "^2.1.0",
@@ -17,6 +18,9 @@
   "devDependencies": {
     "chai": "4.2.0",
     "chai-http": "4.2.1",
+    "eslint": "^7.8.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "mocha": "5.2.0"
   }
 }
