--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
+    "express-pino-logger": "^5.0.0",
     "morgan": "~1.9.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
+    "pino": "^6.6.0",
+    "pino-pretty": "^4.2.1",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
