--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "crud-nodejs",
   "version": "0.0.0",
   "private": true,
+  "main": "./src/index.js",
   "scripts": {
-    "start": "node ./src/config/",
-    "test": "mocha ./src/test/apitest.js"
+    "develop": "nodemon --inspect=0.0.0.0:9229 ./src/index.js",
+    "start": "node ./src/index.js",
+    "api": "mocha ./src/test/apiTest/apitest.js",
+    "test:unit": "jest --config tests/unit/jest.config.js",
+    "test:acceptance": "jest --config tests/unit/jest.config.js",
+    "test": "npm run test:unit -- --watchAll && npm run test:acceptance -- --watchAll"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -12,7 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "express-pino-logger": "^5.0.0",
-    "morgan": "~1.9.0",
+    "jest-junit": "^11.1.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "pino": "^6.6.0",
@@ -25,6 +30,8 @@
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "mocha": "5.2.0"
+    "jest": "^26.4.2",
+    "mocha": "5.2.0",
+    "supertest": "^4.0.2"
   }
 }
