first commit  just added basic ecommerce project

--- a/src/config/db/config.json
+++ b/src/config/db/config.json
@@ -1,18 +1,18 @@
 {
     "local":{
-        "database": "quote",
+        "database": "ecommerce",
         "username": "root",
-        "password": "",
+        "password": "root",
         "host": "127.0.0.1"
     },
     "production":{
-        "database": "quote",
+        "database": "ecommerce",
         "username": "root",
         "password": "",
         "host": "127.0.0.1"
     },
     "staging":{
-        "database": "quote",
+        "database": "ecommerce",
         "username": "root",
         "password": "",
         "host": "127.0.0.1"
