--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "test": "npm run test:unit -- --watchAll && npm run test:acceptance -- --watchAll"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "~4.16.0",
+    "express-flash": "0.0.2",
     "express-pino-logger": "^5.0.0",
+    "express-session": "^1.17.1",
     "jest-junit": "^11.1.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pino": "^6.6.0",
     "pino-pretty": "^4.2.1",
     "sequelize": "^6.3.4"
